# NVTabular

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.examples  Dockerfile.examples.nightly  Dockerfile.examples.nightly.root  Dockerfile.nvtab  HowItWorks.md  MANIFEST.in  Operators.md  README.md  Resources.md  c2cdocker.py  cupy_test.py  index.html  load_data.py  nvt_test.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-gpu.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tf_test.py  tox.ini  train_model.py  versioneer.py
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
bench/: test_notebooks.py
benchmarks/: asv.conf.json  benchmarks.py  test_notebooks.py
ci/: build_and_test.sh  build_docs.sh  check_dist.sh  ignore_codespell_words.txt  nightly.py  pr.gpu.Jenkinsfile  test_inference.sh  test_integration.sh  test_tensorflow.sh  test_training.sh  test_unit.sh
docs/: Makefile  README.md  false_positives.json
examples/: 01-Getting-started.ipynb  02-Advanced-NVTabular-workflow.ipynb  02-Advanced-workflow.ipynb  03-Different-environments.ipynb  03-Running-on-multiple-GPUs-or-on-CPU.ipynb  E2E-NVT.ipynb  MultiGPUBench.md  README.md  cluster-startup-example.sh  criteo-example-basedl.ipynb  criteo-example-iterdl.ipynb  criteo-example-nvtdl.ipynb  criteo-example-petastorm.ipynb  criteo-example-preproc.ipynb  criteo-example.ipynb  criteo-hugectr.ipynb  criteo_benchmark.py  dask-nvtabular-criteo-benchmark.py  dataloader_bench.py  dropna.py  dropna_example.py  fixemb_size.py  gpu_benchmark-criteo.ipynb  gpu_benchmark-rossmann.ipynb  gpu_benchmark.ipynb  movielens_multihot_example.ipynb  movielense_multihot_example.ipynb  multi-gpu_dask.ipynb  optimize_criteo.ipynb  preproc2-v1.ipynb  preproc2-v2.ipynb  preproc2-v3-cudf.ipynb  preproc2-v3.ipynb  preproc3-NVT_E2E.ipynb  recsys2020.ipynb  recsys2020_example.ipynb  recsys2020_preproc.ipynb  rossmann-store-sales-example.ipynb  rossmann-store-sales-preproc-cuDF.ipynb  rossmann-store-sales-preproc.ipynb  (+2 more)
main/: .buildinfo  Introduction.html  api.html  core_features.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
nvtabular/: __init__.py  _version.py  batchloader.py  categorify.py  column.py  column_group.py  column_selector.py  column_similarity.py  data_gen.py  dataframe_method_usage.txt  dataset.py  dispatch.py  dl_encoder.py  ds_iterator.py  ds_writer.py  dtypes.py  encoder.py  feature_group.py  graph.py  groupby.py  io.py  nvt_dtypes.py  ops.py  preproc.py  tag.py  tags.py  tf_dataloader.py  torch_dataloader.py  utils.py  worker.py  workflow.py
nvtabular/inference/triton/: CMakeLists.txt  __init__.py  backend_tf.py  benchmarking_tools.py  data_conversions.py  ensemble.py  model.py  model_config.proto  model_config_util.py  model_hugectr.py  model_pt.py  model_pytorch.py  oprunner_model.py  workflow_model.py
nvtabular/inference/triton/cmake/: TritonNVTabularBackendConfig.cmake.in
nvtabular/inference/triton/cpp_backend/: README.md  nvt.py
nvtabular/inference/triton/cpp_backend/src/: backend.cc  model_inst_state.h  model_state.h  nvt.py  nvtabular.h  utils.h
nvtabular/inference/triton/model/: model_pt.py
nvtabular/inference/triton/models/nvtabular/: config.pbtxt
nvtabular/inference/triton/models/nvtabular/1/: model.nvtabular
nvtabular/inference/triton/runners/: hugectr.py  pytorch.py  tensorflow.py  tf_exp.py
nvtabular/inference/triton/scripts/: client_nvtabular.py  nvt.py
nvtabular/inference/triton/src/: backend.cc  nvtabular.cc  nvtabular.h
nvtabular/inference/triton/workflow/: base.py  hugectr.py  model.py  pytorch.py  tensorflow.py
requirements/: base.txt  dev.txt  docs.txt  gpu.txt  test.txt
stable/: Introduction.html  api.html  core_features.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
tests/: conftest.py
tools/: criteo_config.json  inspect_dataset.py  rossmann_config.json
v0.1.0/: .buildinfo  HowItWorks.html  Introduction.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
v0.1.1/: .buildinfo  HowItWorks.html  Introduction.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
v0.10.0/: .buildinfo  Introduction.html  core_features.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.11.0/: .buildinfo  Introduction.html  core_features.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.2.0/: .buildinfo  HowItWorks.html  Introduction.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
v0.3.0/: .buildinfo  HowItWorks.html  Introduction.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
v0.4.0/: .buildinfo  Introduction.html  core_features.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
v0.5.0/: .buildinfo  Introduction.html  core_features.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
v0.5.1/: .buildinfo  Introduction.html  core_features.html  genindex.html  index.html  search.html  searchindex.js
v0.5.2/: .buildinfo  Introduction.html  core_features.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
v0.5.3/: .buildinfo  Introduction.html  core_features.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
v0.6.0/: .buildinfo  Introduction.html  core_features.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.6.1/: .buildinfo  Introduction.html  core_features.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.7.0/: .buildinfo  Introduction.html  core_features.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.7.1/: .buildinfo  Introduction.html  core_features.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.1.0/: api.html  (+7 more)
(+5826 files in other folders)
