[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.6.0",
]

build-backend = "setuptools.build_meta"

[tool.poetry]
name = "nvtabular"
description = ""
version = "0.11.0"
authors = ["nvidia"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
PyYAML = ">=5.3"
dask = ">=2021.11.0"
distributed = ">=2021.11.0"
protobuf = ">=3.0.0"
tensorflow-metadata = ">=1.2.0"
tqdm = ">=4.0"
pandas = ">=1.2.0"
numba = ">=0.53.1"
pyarrow = ">=1.0"


[tool.poetry.dev-dependencies]
flake8 = ">=3.7"
nbsphinx = ">=0.6"
pytest = ">=5"
recommonmark = ">=0.6"
Sphinx = ">=3"
sphinx_markdown_tables = "*"
sphinx-multiversion = "*"
moto = "*"
boto3 = "*"
s3fs = "*"
sphinx_rtd_theme = "*"
scikit-learn = "*"
graphviz = "*"
asvdb = { git = "https://github.com/rapidsai/asvdb.git", branch = "main" }

[tool.black]
line-length = 100

[tool.isort]
use_parentheses = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
ensure_newline_before_comments = true
line_length = 100
balanced_wrapping = true
indent = "    "
known_third_party = ["cudf", "cupy", "dask", "dask_cuda", "dask_cudf", "numba", "numpy", "pytest", "torch", "rmm", "tensorflow"]
known_first_party = ["merlin"]
skip = ["build",".eggs", "examples/criteo_benchmark.py", "examples/dataloader_bench.py", "model_config_pb2.py"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-module = true
ignore-private = true
ignore-property-decorators = true
ignore-nested-classes = true
ignore-nested-functions = true
ignore-semiprivate = true
ignore-setters = true
fail-under = 35
exclude = ["build", "bench", "docs", "examples", "tests", "setup.py", "versioneer.py", "nvtabular/inference", "nvtabular/loader", "nvtabular/framework_utils"]
verbose = 1
omit-covered-files = true
quiet = false
whitelist-regex = []
ignore-regex = []
color = true

[tool.pytest.ini_options]
filterwarnings = [
		'ignore:`np.*` is a deprecated alias:DeprecationWarning',
		'ignore:The default dtype for empty Series:DeprecationWarning',
		'ignore:General-metadata information not detected:UserWarning',
		'ignore:Changing an NVTabular Dataset to CPU mode:UserWarning',
		'ignore:Initializing an NVTabular Dataset in CPU mode:UserWarning',
		'ignore:Performing a hash-based transformation:UserWarning',
    		'ignore:WARNING..cuDF.to_dlpack',
    		'ignore:::numba.cuda.envvar:',
		'ignore:Call to deprecated create function:DeprecationWarning',
	]
